--- a/src/sass/_indexHeader.scss
+++ b/src/sass/_indexHeader.scss
@@ -1,29 +1,3 @@
-$color:#555;
-$hovercolor:#F30213;
-@mixin borderStyle( $direction,$size:1px, $type:solid, $color:#e5e5e5) {
-   
-    @if $direction!= "" {
-        border-#{$direction}: $size $type $color;
-    } @else {
-        border: $size $type $color;
-    }
-}
-
-%clearfix {
-    *zoom: 1;
-    &:before, &:after {
-      content: " ";
-      display: table;
-    }
-    &:after {
-      clear: both;
-    }
-  } 
-
-.container{
-    width: 1210px;
-    margin: 0 auto;
-}
 
 header{
     position: relative;
@@ -66,6 +40,8 @@ header{
     }
 }
 
+
+//导航栏右边
 header .right{
     float: right;
 
@@ -81,8 +57,6 @@ header .right{
         
     }
 
-
-    
     dt{
         font-size: 12px;
         line-height: 20px;
@@ -100,14 +74,23 @@ header .right{
         }
     }
     dd{
+        width: 100%;
+        position: absolute;
+        overflow: hidden;
+        height: 0;
+        background-color: white;
+        box-sizing: border-box;
+        top: 35px;
+        // @include borderStyle('');
         ul{
             padding-bottom:5px;
-            height: 0px;
-            overflow: hidden;
-            position: absolute;
-            top: 36px;
-            background-color: white;
-            @include borderStyle('');
+            height: auto;
+            
+        }
+        li:hover{
+            a{
+                color: $hovercolor;
+            }
         }
     }
     .login a:first-child{
@@ -118,11 +101,28 @@ header .right{
         color: $hovercolor;
     }
   
-    .myorder:hover{
-        ul{
-            height: 100px;
-            transition: 1s;
+    .myorder:hover,.call-center:hover{
+        background-color: white;
+        dt{
+            @include borderStyle('');
+            padding-left: 11px;
+            padding-right: 11px;
+            border-bottom: none;
+            border-top: none;
+            a{
+                color: $hovercolor;
+            }
+            span{
+                transform:rotateZ(180deg);
+                transition: 0.3s;
+            }
         }
+       dd{
+            height: 90px;
+            @include borderStyle('');
+            border-top: none;
+            transition: height 0.3s;
+       }
     }
     .myorder{
         ul {
@@ -139,23 +139,52 @@ header .right{
        
     } 
 
-    .mymall  ul{
-        width: 160px;
-        li{
-            width: 50%;
-            float: left;
-            padding: 4px 0;
-            margin: 0;
-            a{
-                font-size: 12px;
-                line-height: 24px;
-                display: block;
-                clear: both;
-                padding: 2px 0 2px 10px;
+    .mymall {
+        dd{
+            width: 200%;
+        }
+        ul{
+            width: 160px;
+            li{
+                width: 50%;
+                float: left;
+                padding: 4px 0;
+                margin: 0;
+                a{
+                    font-size: 12px;
+                    line-height: 24px;
+                    display: block;
+                    clear: both;
+                    padding: 2px 0 2px 10px;
+                }
             }
         }
+        
     }
     
+    .mymall:hover{
+        background-color: white;
+        dt{
+            @include borderStyle('');
+            padding-left: 11px;
+            padding-right: 11px;
+            border-bottom: none;
+            border-top: none;
+            a{
+                color: $hovercolor;
+            }
+            span{
+                transform:rotateZ(180deg);
+                transition: 0.3s;
+            }
+        }
+       dd{
+            height: 109px;
+            @include borderStyle('');
+            border-top: none;
+            transition: height 0.3s;
+       }
+    }
     .call-center ul a{
         font-size: 12px;
         line-height: 24px;
@@ -164,7 +193,27 @@ header .right{
         padding: 2px 0 2px 10px;
     }
         
-    
+    .mobile-mall:hover{
+        background-color: white;
+        dt{
+            @include borderStyle('');
+            padding-left: 11px;
+            padding-right: 11px;
+            border-bottom: none;
+            border-top: none;
+            color: $hovercolor;
+            .arrow{
+                transform:rotateZ(180deg);
+                transition: 0.3s;
+            }
+        }
+        dd{
+            height: 223px;
+            @include borderStyle('');
+            border-top: none;
+            transition: height 0.3s;
+       }
+    }
     .mobile-mall{
         width: 120px;
         .icon{
@@ -176,18 +225,14 @@ header .right{
             background: url('../imgs/web_common_pic.png') no-repeat -120px 0;
         }
         dd{
-            width: 140px;
+            width: 150%;
+            height: 0;
+            left: -60px;
         }
         .QRcode{
-            position: absolute;
-            left: 0;//62
-            top:-180px;//36
-
-            display: none;
+           
+            display: block;
             padding: 20px;
-            background-color: white;
-            @include borderStyle('');
-            border-top: none;
             img{
                 width: 140px;
                 height: 140px;
@@ -204,165 +249,6 @@ header .right{
     }
 }
 
-input[type='text']{
-    font: 12px/1.5 Tahoma,Arial,"\5b8b\4f53",sans-serif;
-    color: #777;
-    background-color: #FFF;
-    vertical-align: top;
-    display: inline-block;
-    min-height: 20px;
-    padding: 5px;
-    border: solid 1px #E6E9EE;
-    outline: 0 none;
-}
 
 
 
-#search{
-    position: relative;
-    z-index: 100;
-    background-color: #FFF;
-    width: 100%;
-    @extend %clearfix;
-    .container{
-        height: 109px;
-    }
-    h1{
-        display: block;
-        width: 240px;
-        height: 68px;
-        float: left;
-        margin: 22px 120px auto 0;
-        text-indent: -9999px;
-        img{
-            display: block;
-            margin-top: -13px;
-        }
-    }
-    .search-wrap{
-        width: 550px;
-        float: left;
-        margin-top: 34px;
-        
-    }
-    .search-bar{
-        display: block;
-        width: 100%;
-        height: 36px;
-        position: relative;
-    }
-    form{
-        display: block;
-        height: 36px;
-        span{
-            border: 0;
-            clip: rect(0 0 0 0);
-            height: 1px;
-            margin: -1px;
-            overflow: hidden;
-            padding: 0;
-            position: absolute;
-            width: 1px;
-        }
-        input[name='keyword']{
-            float: left;
-            border: solid $hovercolor;
-            border-width: 2px 0 2px 2px;
-            width: 460px;
-            height: 24px;
-            padding: 4px;
-            line-height: 24px;
-            color: $color;
-        }
-        input[type='submit']{
-            display: block;
-            font-family: "Microsoft YaHei",HelveticaNeue,Helvetica,Arial,sans-serif;
-            font-size: 16px;
-            color: #FFF;
-            line-height: 30px;
-            font-weight: 500;
-            background-color: $hovercolor;
-            width: 80px;
-            height: 36px;
-            float: right;
-            padding: 0;
-            margin: 0;
-            border: none;
-            border-radius: 0;
-            cursor: pointer;
-            transition: .2s ease-in-out;
-        }
-    }
-    .keyword{
-        line-height: 20px;
-        white-space: nowrap;
-        width: 100%;
-        height: 20px;
-        margin-top: 5px;
-        overflow: hidden;
-        color: #666;
-        ul{
-            vertical-align: top;
-            display: inline-block;
-            font-size: 0;
-            margin-left: 7px;
-            li{
-                font-size: 12px;
-                vertical-align: top;
-                letter-spacing: normal;
-                word-spacing: normal;
-                display: inline-block;
-                margin-right: 12px;
-            }
-            a{
-                color: #999;
-            }
-        }
-    }
-  
-}
-.mycart{
-    position: relative;
-    z-index: 11;
-    float: left;
-    height: 36px;
-    margin-top: 34px;
-    margin-left: 30px;
-    .title{
-        position: relative;
-        width: 91px;
-        height: 34px;
-        padding: 0 28px 0 19px;
-        border: 1px solid #DFDFDF;
-        background-color: #f9f9f9;
-        line-height: 34px;
-        .icon{
-            position: absolute;
-            overflow: hidden;
-            top: 9px;
-            left: 90px;
-            width: 16px;
-            height: 16px;
-            background: url('../imgs/web_common_pic.png') no-repeat 0 -30px;
-        }
-        .count{
-            position: absolute;
-            top: 7px;
-            left: 105px;
-            display: inline-block;
-            width: 14px;
-            padding: 1px;
-            letter-spacing: -1px;
-            text-align: center;
-            background-color: #DA1026;
-            border-radius: 7px;
-            font-family: tahoma,arial;
-            font-size: 12px;
-            line-height: 14px;
-            color: #fff;
-        }
-        a{
-            color: $hovercolor;
-        }
-    }
-}
