--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,6 @@
 @charset "utf-8";
+@import "indexConn";
 @import "indexHeader";
+@import "indexSearch";
+@import "indexNav";
+@import "indexBanner";
