--- a/src/sass/_indexConn.scss
+++ b/src/sass/_indexConn.scss
@@ -1,4 +1,6 @@
 $color:#555;
+$killcolor:#fff;
+$sometitle:#ffd300;
 $hovercolor:#F30213;
 @mixin borderStyle( $direction,$size:1px, $type:solid, $color:#e5e5e5) {
    
