--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,3 +4,6 @@
 @import "indexSearch";
 @import "indexNav";
 @import "indexBanner";
+@import "indexSeckill";
+@import "indexFoods";
+@import "indexOther";
