--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
-.wrap, #search, header .container {
+#otherGoods .con, #foods .food-wrap, #foods .container, #seckill .kill-content .list ul, .wrap, #search, header .container {
   *zoom: 1;
 }
-.wrap:before, #search:before, header .container:before, .wrap:after, #search:after, header .container:after {
+#otherGoods .con:before, #foods .food-wrap:before, #foods .container:before, #seckill .kill-content .list ul:before, .wrap:before, #search:before, header .container:before, #otherGoods .con:after, #foods .food-wrap:after, #foods .container:after, #seckill .kill-content .list ul:after, .wrap:after, #search:after, header .container:after {
   content: " ";
   display: table;
 }
-.wrap:after, #search:after, header .container:after {
+#otherGoods .con:after, #foods .food-wrap:after, #foods .container:after, #seckill .kill-content .list ul:after, .wrap:after, #search:after, header .container:after {
   clear: both;
 }
 
@@ -44,6 +44,10 @@ input[type=text] {
   padding: 5px;
   border: solid 1px #E6E9EE;
   outline: 0 none;
+}
+
+body {
+  background-color: #f2f2f2;
 }
 
 header {
@@ -466,6 +470,7 @@ nav .menu .active {
 #banner {
   width: 100%;
   height: 479px;
+  background-color: #fff;
 }
 #banner .top-live {
   height: 79px;
@@ -587,6 +592,13 @@ nav .menu .active {
   width: 100%;
   background-color: #c5000c;
 }
+.wrap .left {
+  width: 845px;
+  margin-left: 180px;
+  height: 400px;
+  float: left;
+  background-color: blue;
+}
 .wrap .right {
   float: right;
   width: 185px;
@@ -633,6 +645,497 @@ nav .menu .active {
   overflow: hidden;
   text-align: center;
   padding: 10px;
+}
+
+#seckill {
+  width: 100%;
+  height: auto;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+#seckill .container {
+  overflow: hidden;
+}
+#seckill .kill-title {
+  padding-left: 30px;
+  padding-right: 20px;
+  height: 55px;
+  line-height: 55px;
+  background: url("https://statics.cnrmall.com/web/static/img/active/seckill.png") no-repeat 0 0;
+}
+#seckill .kill-title .title {
+  float: left;
+}
+#seckill .kill-title .title .icon {
+  float: left;
+  width: 34px;
+  height: 36px;
+  background: url("../imgs/active.png") no-repeat 0 -48px;
+  margin-top: 10px;
+  margin-right: 15px;
+  color: #fff;
+}
+#seckill .kill-title .title h3 {
+  font-size: 26px;
+  height: 36px;
+  line-height: 36px;
+  float: left;
+  padding-top: 9px;
+  font-weight: 300;
+  color: #fff;
+}
+#seckill .kill-title .title a {
+  float: left;
+  margin-left: 12px;
+  font-size: 14px;
+  line-height: 24px;
+  height: 24px;
+  margin-top: 19px;
+  color: #fff;
+  font-weight: 400;
+}
+#seckill .kill-title .title .fa {
+  font-size: 14px;
+  margin-right: 4px;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  margin-left: 5px;
+}
+#seckill .kill-title .title .fa::before {
+  content: "";
+}
+#seckill .kill-title .countdown {
+  float: right;
+  line-height: 55px;
+}
+#seckill .kill-title .tip {
+  font-size: 14px;
+  padding-top: 10px;
+  line-height: 45px;
+  float: left;
+  color: #fff;
+}
+#seckill .kill-title .timer {
+  color: #440106;
+  font-size: 20px;
+  line-height: 2;
+  float: left;
+  padding: 0 8px 0 6px;
+  margin-top: 8px;
+  font-weight: 600;
+}
+#seckill .kill-title .timer span {
+  background-color: #000;
+  border: 1px solid #000;
+  color: #f90013;
+  padding: 5px;
+  margin: 0 3px;
+  border-radius: 4px;
+  font-weight: 400;
+}
+#seckill .kill-content {
+  padding: 12px 0 13px;
+  overflow: hidden;
+  background: #fff;
+}
+#seckill .kill-content:hover .slider {
+  display: block !important;
+}
+#seckill .kill-content .list-wrap {
+  width: 100%;
+  height: 225px;
+  position: relative;
+  overflow: hidden;
+}
+#seckill .kill-content .list-wrap .slider {
+  display: none;
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  width: 28px;
+  height: 62px;
+  line-height: 62px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.2);
+  font-family: simsun;
+  font-size: 22px;
+  font-weight: 400;
+  transform: translateY(-50%);
+  color: #fff;
+}
+#seckill .kill-content .list-wrap .next {
+  right: 0;
+}
+#seckill .kill-content .list ul {
+  position: relative;
+  left: -1px;
+  height: 225px;
+}
+#seckill .kill-content .list li {
+  float: left;
+  width: 170px;
+  height: 225px;
+  padding: 0 15px;
+  border-left: 1px solid #e7e7e7;
+}
+#seckill .kill-content .list li:hover img {
+  transform: translateY(-5px);
+}
+#seckill .kill-content .goods {
+  position: relative;
+}
+#seckill .kill-content .goods a {
+  display: block;
+  width: 100%;
+}
+#seckill .kill-content .goods img {
+  display: block;
+  width: 130px;
+  height: 130px;
+  margin: 17px auto;
+  transition: transform 0.4s ease;
+}
+#seckill .kill-content .goods .sk-name {
+  color: #999;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  font-size: 12px;
+  height: 32px;
+  text-align: left;
+  line-height: 16px;
+}
+#seckill .kill-content .goods .sk-shadow {
+  position: absolute;
+  left: 0;
+  top: 118px;
+  text-align: center;
+  width: 170px;
+  height: 20px;
+  background: url("../imgs/active.png") no-repeat;
+  background-position: -340px 0;
+}
+#seckill .kill-content .price {
+  padding: 3px 0;
+  height: 25px;
+}
+#seckill .kill-content .price .newprice {
+  font-size: 16px;
+  font-weight: 600;
+  margin-right: 4px;
+  color: #f1352b;
+}
+#seckill .kill-content .price .oldprice {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: #999;
+}
+
+#foods {
+  width: 100%;
+}
+#foods .container {
+  background-color: #fff;
+}
+#foods .title {
+  height: 58px;
+  width: 100%;
+  line-height: 58px;
+  background-color: #edba21;
+  background-image: linear-gradient(90deg, #edba21, #e19631);
+  padding-left: 25px;
+  box-sizing: border-box;
+}
+#foods .title h3 {
+  font-size: 22px;
+  font-weight: 400;
+  color: #fff;
+  display: inline;
+}
+#foods .food-wrap {
+  padding: 10px;
+}
+#foods .food-wrap .left {
+  float: left;
+  width: 580px;
+  position: relative;
+  height: 400px;
+}
+#foods .food-wrap .left .sometit {
+  color: #ffd300;
+}
+#foods .food-wrap .right {
+  float: left;
+  width: 579px;
+  margin-left: 15px;
+  padding-left: 15px;
+  position: relative;
+  overflow: hidden;
+  border-left: 1px solid #E6E6E6;
+}
+#foods .food-wrap .right .some {
+  width: 187px;
+}
+#foods .food-wrap .cover {
+  float: left;
+  margin-right: 10px;
+  width: 186px;
+  height: 260px;
+  overflow: hidden;
+  background-color: #F7F7F7;
+}
+#foods .food-wrap .cover:hover img {
+  transform: translateX(-10px);
+}
+#foods .food-wrap .cover a {
+  display: block;
+}
+#foods .food-wrap .cover img {
+  transition: transform 0.2s ease 0s;
+}
+#foods .food-wrap .some {
+  overflow: hidden;
+  position: relative;
+  float: left;
+  width: 382px;
+  height: 260px;
+}
+#foods .food-wrap .some a {
+  display: block;
+  float: left;
+  position: relative;
+  width: 191px;
+  height: 130px;
+}
+#foods .food-wrap .some img {
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  right: 5px;
+  bottom: 10px;
+  width: 100px;
+  height: 100px;
+  transition: 0.5s;
+  background-color: #F7F7F7;
+  transition: transform 0.5s ease 0s;
+}
+#foods .food-wrap .some img:hover {
+  transform: translateX(-5px);
+}
+#foods .food-wrap .sometit {
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 25px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  max-width: 130px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-break: break-all;
+  font-size: 14px;
+}
+#foods .food-wrap .somecon {
+  position: absolute;
+  z-index: 1;
+  top: 50px;
+  left: 25px;
+  max-width: 50px;
+  font-size: 12px;
+  color: #666;
+}
+#foods .food-wrap .x {
+  position: absolute;
+  top: 130px;
+  left: 0;
+  width: 382px;
+  height: 1px;
+  background-color: #E6E6E6;
+}
+#foods .food-wrap .y {
+  position: absolute;
+  top: 0;
+  left: 191px;
+  width: 1px;
+  height: 260px;
+  background-color: #E6E6E6;
+}
+#foods .food-wrap .more {
+  overflow: hidden;
+  clear: both;
+  height: 130px;
+  padding-top: 10px;
+}
+#foods .food-wrap .more a {
+  display: inline-block;
+  width: 180px;
+  overflow: hidden;
+  margin-right: 15px;
+}
+#foods .food-wrap .more a:hover img {
+  transform: translateX(-12px);
+}
+#foods .food-wrap .more a.last {
+  margin-right: 0 !important;
+}
+#foods .food-wrap .more img {
+  width: 196px;
+  height: 130px;
+  transition: transform 0.4s ease 0s;
+}
+
+#otherGoods {
+  margin-top: 15px;
+}
+#otherGoods .container {
+  background-color: #fff;
+}
+#otherGoods .left, #otherGoods .right, #otherGoods .mid {
+  width: 396px;
+  height: 478px;
+  float: left;
+  margin-right: 10px;
+  background-color: #fff;
+}
+#otherGoods .left .title {
+  background-color: #cd375e;
+  background-image: linear-gradient(90deg, #cd375e, #c1314d);
+}
+#otherGoods .mid .title {
+  background-color: #974676;
+  background-image: linear-gradient(90deg, #974676, #9e4075);
+}
+#otherGoods .right {
+  margin-right: 0;
+  width: 397px;
+}
+#otherGoods .right .title {
+  background-color: #78538e;
+  background-image: linear-gradient(90deg, #78538e, #674083);
+}
+#otherGoods .title {
+  width: 100%;
+  height: 58px;
+  line-height: 58px;
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+#otherGoods .title h3 {
+  font-size: 22px;
+  font-weight: 400;
+  color: #FFF;
+}
+#otherGoods .con {
+  padding: 10px;
+}
+#otherGoods .con .cover {
+  float: left;
+  margin-right: 10px;
+  width: 186px;
+  height: 260px;
+  overflow: hidden;
+  background-color: #F7F7F7;
+}
+#otherGoods .con .cover:hover img {
+  transform: translateX(-10px);
+}
+#otherGoods .con .cover a {
+  display: block;
+}
+#otherGoods .con .cover img {
+  transition: transform 0.2s ease 0s;
+}
+#otherGoods .con .some {
+  overflow: hidden;
+  position: relative;
+  float: left;
+  width: 180px;
+  height: 260px;
+}
+#otherGoods .con .some a {
+  display: block;
+  float: left;
+  position: relative;
+  width: 191px;
+  height: 130px;
+}
+#otherGoods .con .some img {
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  right: 5px;
+  bottom: 10px;
+  width: 100px;
+  height: 100px;
+  transition: 0.5s;
+  background-color: #F7F7F7;
+  transition: transform 0.5s ease 0s;
+}
+#otherGoods .con .some img:hover {
+  transform: translateX(-5px);
+}
+#otherGoods .con .sometit {
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 25px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  max-width: 130px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-break: break-all;
+  font-size: 14px;
+}
+#otherGoods .con .somecon {
+  position: absolute;
+  z-index: 1;
+  top: 50px;
+  left: 25px;
+  max-width: 50px;
+  font-size: 12px;
+  color: #666;
+}
+#otherGoods .con .x {
+  position: absolute;
+  top: 130px;
+  left: 0;
+  width: 382px;
+  height: 1px;
+  background-color: #E6E6E6;
+}
+#otherGoods .con .y {
+  position: absolute;
+  top: 0;
+  left: 191px;
+  width: 1px;
+  height: 260px;
+  background-color: #E6E6E6;
+}
+#otherGoods .con .more {
+  overflow: hidden;
+  clear: both;
+  height: 130px;
+  padding-top: 10px;
+}
+#otherGoods .con .more a {
+  display: inline-block;
+  width: 185px;
+  overflow: hidden;
+  margin-right: 2px;
+}
+#otherGoods .con .more a:hover img {
+  transform: translateX(-12px);
+}
+#otherGoods .con .more a.last {
+  margin-right: 0 !important;
+}
+#otherGoods .con .more img {
+  width: 196px;
+  height: 130px;
+  transition: transform 0.4s ease 0s;
 }
 
 /*# sourceMappingURL=index.css.map */
