--- a/src/sass/_indexBanner.scss
+++ b/src/sass/_indexBanner.scss
@@ -2,11 +2,12 @@
 #banner{
     width: 100%;
     height: 479px;
-    
+    background-color: #fff;
     .top-live{
         height: 79px;
         width: 1033px;
         margin-left: 180px;
+        
         .left{
             width: 848px;
             height: 79px;
@@ -130,6 +131,13 @@
     background-color: #c5000c;
     @extend %clearfix;
 
+    .left{
+        width: 845px;
+        margin-left: 180px;
+        height: 400px;
+        float: left;
+        background-color: blue;
+    }
     .right{
         float: right;
         width: 185px;
@@ -178,4 +186,5 @@
             }
         }
     }
+    
 }
