--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,8 @@
 @charset "utf-8";
 @import "indexConn";
-@import "indexHeader";
-@import "indexSearch";
-@import "indexNav";
 @import "indexBanner";
 @import "indexSeckill";
 @import "indexFoods";
 @import "indexOther";
+@import "indexLike";
+
