--- a/src/sass/_indexOther.scss
+++ b/src/sass/_indexOther.scss
@@ -2,6 +2,7 @@
     margin-top: 15px;
     .container{
         background-color: $killcolor;
+        @extend %clearfix;
     }
     .left,.right,.mid{
         width: 396px;
@@ -39,7 +40,7 @@
         h3{
             font-size: 22px;
             font-weight: 400;
-            color: #FFF;
+            color: $killcolor;
         }
     }
     .con{
