--- a/src/css/header.css
+++ b/src/css/header.css
@@ -105,6 +105,29 @@ header .left .back-home span {
 header .right {
   float: right;
 }
+header .right .unuse {
+  display: block;
+}
+header .right .use {
+  display: none;
+  font-size: 12px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+}
+header .right .use sub {
+  display: inline-block;
+  height: 16px;
+  padding: 1px 5px;
+  border-radius: 2px;
+  background-color: #555;
+  position: relative;
+  top: -5px;
+  color: #FFF8B5;
+  font-size: 11px;
+  line-height: 15px;
+  font-weight: 600;
+}
 header .right dl {
   height: 35px;
   display: block;
