--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -70,7 +70,29 @@ header{
 //导航栏右边
 header .right{
     float: right;
-
+    .unuse{
+        display: block;
+    }
+    .use{
+        display: none;
+        font-size: 12px;
+        height: 20px;
+        border: none;
+        background-color: transparent;
+        sub{
+            display: inline-block;
+            height: 16px;
+            padding: 1px 5px;
+            border-radius: 2px;
+            background-color: #555;
+            position: relative;
+            top: -5px;
+            color: #FFF8B5;
+            font-size: 11px;
+            line-height: 15px;
+            font-weight: 600;
+        }
+    }
     dl{
         height: 35px;
         display: block;
@@ -90,6 +112,7 @@ header .right{
         padding: 8px 12px 7px 12px;
         border: none;
         background-color: transparent;
+       
         .arrow{
             background: url('../imgs/web_common_pic.png') no-repeat -110px -60px;
             vertical-align: middle;
