--- a/src/css/login.css
+++ b/src/css/login.css
@@ -193,6 +193,21 @@ header .container span {
   background: url(../imgs/login_pic.png) no-repeat;
   background-position: 0 -110px;
 }
+.loginform .user .error, .loginform .password .error {
+  display: none;
+  color: #000;
+  line-height: 24px;
+  background: #FFF5D9 no-repeat 0 0;
+  text-align: left;
+  white-space: nowrap;
+  height: 24px;
+  padding: 8px 12px 8px 24px;
+  position: absolute;
+  z-index: 2;
+  top: -1px;
+  left: 200px;
+  font-size: 12px;
+}
 .loginform .user input, .loginform .password input {
   overflow: hidden;
   float: none;
