--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -213,6 +213,21 @@ header{
             background: url(../imgs/login_pic.png) no-repeat;
             background-position: 0 -110px;
         }
+        .error{
+            display: none ;
+            color: #000;
+            line-height: 24px;
+            background: #FFF5D9 no-repeat 0 0;
+            text-align: left;
+            white-space: nowrap;
+            height: 24px;
+            padding: 8px 12px 8px 24px;
+            position: absolute;
+            z-index: 2;
+            top: -1px;
+            left:200px;
+            font-size: 12px;
+        }
         input{
             overflow: hidden;
             float: none;
