主页列表页渲染

--- a/src/sass/_indexLike.scss
+++ b/src/sass/_indexLike.scss
@@ -41,6 +41,10 @@
             &:hover{
                 border-color: #f10214;
             }
+            .imgwrap{
+                width: 100%;
+                height: 224px;
+            }
             img{
                 width: auto;
                 height: 224px;
