--- a/src/css/conn.css
+++ b/src/css/conn.css
@@ -96,6 +96,7 @@ input[type=text] {
   padding: 4px;
   line-height: 24px;
   color: #555;
+  text-align: left;
 }
 #search .keyword {
   line-height: 20px;
