--- a/src/css/index.css
+++ b/src/css/index.css
@@ -763,6 +763,10 @@ input[type=text] {
 #related .relateditem a:hover {
   border-color: #f10214;
 }
+#related .relateditem a .imgwrap {
+  width: 100%;
+  height: 224px;
+}
 #related .relateditem a img {
   width: auto;
   height: 224px;
