--- a/src/sass/_connSearch.scss
+++ b/src/sass/_connSearch.scss
@@ -54,6 +54,7 @@
             padding: 4px;
             line-height: 24px;
             color: $color;
+            text-align: left;
         }
        
     }
