--- a/src/css/conn.css
+++ b/src/css/conn.css
@@ -152,10 +152,10 @@ input[type=text] {
   background: url("../imgs/web_common_pic.png") no-repeat 0 -30px;
 }
 .mycart .title .count {
+  display: none;
   position: absolute;
   top: 7px;
   left: 105px;
-  display: inline-block;
   width: 14px;
   padding: 1px;
   letter-spacing: -1px;
