--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -43,7 +43,10 @@ input[type='text']{
             }
         }
         .smallshade{
+            display: none;
             position: absolute;
+            left: 0;
+            top: 0;
             width: 180px;
             height: 180px;
             background: #ffffff;
@@ -51,16 +54,17 @@ input[type='text']{
             opacity: 0.7;
         }
         .bigshade{
-            width: 360px;
-            height: 360px;
+            width:450px;
+            height: 450px;
             background-color: red;
             position: absolute;
             left: 380px;
             top: 0;
             z-index: 10;
-            background: url("../imgs/list.jpg")no-repeat;
+            background: url()no-repeat;
             background-size: 720px 720px;
             background-position: 0px 0px;
+            display: none;
         }
         .controll{
             position: absolute;
@@ -69,6 +73,76 @@ input[type='text']{
             width: 360px;
             height: 56px;
             margin: 10px auto 0 auto;
+            .fa{
+                &::before{
+                    content: "\f105";
+                }
+                font: normal normal normal 14px/1 FontAwesome;
+            }
+
+            a{  
+                &:hover{
+                    background-color: #FAFAFA;
+                    color: #e4393c;
+                    border-color: #F1F1F1;
+                }
+                float: left;
+                visibility: hidden;
+                top: 0;
+                height: 54px;
+                width: 18px;
+                padding: 0;
+                border: solid 1px #FFF;
+                border-radius: 2px;
+                background-color: #FFF;
+                text-align: center;
+                font-size: 18px;
+                line-height: 56px;
+                color: #AAA;
+                
+                
+            }
+            .prev{
+                .fa::before{
+                    content: "\f104";
+                }
+                margin-left: 5px;
+            }
+            
+            .goods-smallpic{
+                float: left;
+                margin-left: 5px;
+                width: 305px;
+                height: 56px;
+                overflow: hidden;
+                ul{
+                    
+                    &::after{
+                        content: '';
+                        display: block;
+                        clear: both;
+                    }
+                }
+                li{
+                    float: left;
+                    width: 56px;
+                    height: 56px;
+                    margin-right: 5px;
+                }
+                .active{
+                    img{
+                        border-color: #e4393c;
+                    }
+                    
+                }
+                img{
+                    width: 50px;
+                    height: 50px;
+                    padding: 2px;
+                    border: solid 1px #F5F5F5;
+                    cursor: pointer;
+                }
+            }
         }
         .handle{
             position: absolute;
