--- a/src/sass/shoppingcar.scss
+++ b/src/sass/shoppingcar.scss
@@ -195,6 +195,7 @@ body{
         background: #FFF;
     }
     .things{
+        display: none;
         position: relative;
         padding: 20px 19px 25px 19px;
         border-style: solid;
